--- a/demo-extended.html
+++ b/demo-extended.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="utf-8">
 		
-		<title>SimpleTouch plugin</title>
+		<title>SimpleTouch plugin demo</title>
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		
@@ -56,7 +56,7 @@
 		
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<script src="js/jquery.simpleTouch.js"></script>
-		<script src="js/jquery.simpleTouch-init.js"></script>
+		<script src="js/jquery.simpleTouch-init-extended.js"></script>
 	</body>
 </html>
 
